--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="register_main_menu">Register</string>
     <string name="loginCaterer_main_menu">Login as a Caterer</string>
     <string name="registerCaterer_main_menu">Register as a Caterer</string>
+    <string name="name_main_menu">Name</string>
+    <string name="email_main_menu">Email</string>
+    <string name="phoneNumber_main_menu">Phone Number</string>
+    <string name="password_main_menu">Password</string>
+    <string name="cateringService_main_menu">Catering Service</string>
+    <string name="continueButton_main_menu">CONTINUE</string>
+
 </resources>
